@@ -181,3 +181,12 @@ POP3DSTART=NO
 # MAILDIRPATH - directory name of the maildir directory.
 #
 MAILDIRPATH=Maildir
+
+##NAME: MIME_UNICODE_MESSAGE_TYPE:0
+#
+# MIME type that wraps Unicode messages for downloading by non-Unicode
+# POP3 clients.
+#
+# This can be changed to "message/rfc822" to accomodate older mail clients.
+
+MIME_UNICODE_MESSAGE_TYPE="message/global"
